--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.4.*",
         "symfony/maker-bundle": "^1.66",
+        "symfony/rate-limiter": "6.4",
         "symfony/runtime": "6.4.*",
         "symfony/serializer": "6.4.*",
         "symfony/yaml": "6.4.*"
