--- a/public/assets/frontend/.vite/manifest.json
+++ b/public/assets/frontend/.vite/manifest.json
@@ -1,11 +1,11 @@
 {
   "src/main.jsx": {
-    "file": "assets/main-DwwKicFw.js",
+    "file": "assets/main-BGzitU5O.js",
     "name": "main",
     "src": "src/main.jsx",
     "isEntry": true,
     "css": [
-      "assets/main-BaY7LoP-.css"
+      "assets/main-CXK3acjw.css"
     ]
   }
 }
